@@ -1,4 +1,4 @@
-# -*- test-case-name: twisted.web.test.test_xmlrpc -*-
+# -*- test-case-name: twisted.web.test.test_jsonrpc -*-
 #
 # Copyright (c) 2001-2004 Twisted Matrix Laboratories.
 # See LICENSE for details.
@@ -7,11 +7,8 @@
 
 """Test XML-RPC support."""
 
-import xmlrpclib
-from adytum.twisted.web2 import xmlrpc
 from twisted.web2 import server
 from twisted.web2.channel import http
-from adytum.twisted.web2.xmlrpc import JSONRPC, addIntrospection
 from twisted.trial import unittest
 from twisted.internet import reactor, defer
 from twisted.python import log
@@ -21,8 +18,9 @@ try:
 except ImportError:
     Proxy = None
 
-from adytum.twisted.web import jsonrpc
-from adytum.twisted.web.jsonrpc import JSONRPC, addIntrospection
+from adytum import jsonrpclib
+from adytum.twisted.web2 import jsonrpc
+from adytum.twisted.web2.jsonrpc import JSONRPC, addIntrospection
 
 import time
 
@@ -41,54 +39,54 @@ class Test(JSONRPC):
     addSlash = True # cause it's at the root
     
     # the doc string is part of the test
-    def xmlrpc_add(self, request, a, b):
+    def jsonrpc_add(self, request, a, b):
         """This function add two numbers."""
         return a + b
 
-    xmlrpc_add.signature = [['int', 'int', 'int'],
+    jsonrpc_add.signature = [['int', 'int', 'int'],
                             ['double', 'double', 'double']]
 
     # the doc string is part of the test
-    def xmlrpc_pair(self, request, string, num):
+    def jsonrpc_pair(self, request, string, num):
         """This function puts the two arguments in an array."""
         return [string, num]
 
-    xmlrpc_pair.signature = [['array', 'string', 'int']]
+    jsonrpc_pair.signature = [['array', 'string', 'int']]
 
     # the doc string is part of the test
-    def xmlrpc_defer(self, request, x):
+    def jsonrpc_defer(self, request, x):
         """Help for defer."""
         return defer.succeed(x)
 
-    def xmlrpc_deferFail(self, request):
+    def jsonrpc_deferFail(self, request):
         return defer.fail(TestValueError())
 
     # don't add a doc string, it's part of the test
-    def xmlrpc_fail(self, request):
+    def jsonrpc_fail(self, request):
         raise TestRuntimeError
 
-    def xmlrpc_fault(self, request):
-        return xmlrpc.Fault(12, "hello")
+    def jsonrpc_fault(self, request):
+        return jsonrpclib.Fault(12, "hello")
 
-    def xmlrpc_deferFault(self, request):
-        return defer.fail(xmlrpc.Fault(17, "hi"))
+    def jsonrpc_deferFault(self, request):
+        return defer.fail(jsonrpclib.Fault(17, "hi"))
 
-    def xmlrpc_complex(self, request):
+    def jsonrpc_complex(self, request):
         return {"a": ["b", "c", 12, []], "D": "foo"}
 
-    def xmlrpc_dict(self, request, map, key):
+    def jsonrpc_dict(self, request, map, key):
         return map[key]
 
     def getFunction(self, functionPath):
         try:
             return JSONRPC.getFunction(self, functionPath)
-        except xmlrpc.NoSuchFunction:
+        except jsonrpclib.NoSuchFunction:
             if functionPath.startswith("SESSION"):
-                raise xmlrpc.Fault(self.SESSION_EXPIRED, "Session non-existant/expired.")
+                raise jsonrpclib.Fault(self.SESSION_EXPIRED, "Session non-existant/expired.")
             else:
                 raise
 
-    xmlrpc_dict.help = 'Help for dict.'
+    jsonrpc_dict.help = 'Help for dict.'
 
 
 class JSONRPCTestCase(unittest.TestCase):
@@ -128,7 +126,7 @@ class JSONRPCTestCase(unittest.TestCase):
                                  (12, "fault"), (23, "noSuchMethod"),
                                  (17, "deferFault"), (42, "SESSION_TEST")]:
             d = self.proxy().callRemote(methodName)
-            d = self.assertFailure(d, xmlrpc.Fault)
+            d = self.assertFailure(d, jsonrpclib.Fault)
             d.addCallback(lambda exc, code=code: self.assertEquals(exc.faultCode, code))
             dl.append(d)
         d = defer.DeferredList(dl, fireOnOneErrback=True)
@@ -146,9 +144,9 @@ class JSONRPCTestCase2(JSONRPCTestCase):
 class JSONRPCTestIntrospection(JSONRPCTestCase):
 
     def setUp(self):
-        xmlrpc = Test()
-        addIntrospection(xmlrpc)
-        self.p = reactor.listenTCP(0, http.HTTPFactory(server.Site(xmlrpc)),
+        jsonrpc = Test()
+        addIntrospection(jsonrpc)
+        self.p = reactor.listenTCP(0, http.HTTPFactory(server.Site(jsonrpc)),
             interface="127.0.0.1")
         self.port = self.p.getHost().port
 
